# tiny-pointer-trees

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml  cmake-tests.yml
src/aho_corasick/: CMakeLists.txt  automaton.cpp  automaton.hpp
src/art/: CMakeLists.txt  example.cpp
src/art/tiny_art/: ArtDerefTables.h  Epoche.cpp  Epoche.h  Key.h  Leaf.cpp  N.cpp  N.h  N16.cpp  N256.cpp  N4.cpp  N64.cpp  Tree.cpp  Tree.h
src/art/tiny_art_256/: ArtDerefTables.h  Epoche.cpp  Epoche.h  Leaf.cpp  N.cpp  N.h  N256.cpp  Tree.cpp  Tree.h
src/art/tiny_art_64/: ArtDerefTables.h  Epoche.cpp  Epoche.h  Leaf.cpp  N.cpp  N.h  N16.cpp  N256.cpp  N64.cpp  Tree.cpp  Tree.h
src/tiny_ptr/: deref_table.h  sequence_lock.h  tiny_ptr.h  util.h
src/trie/: tiny_trie.cpp  tiny_trie.h  tiny_trie_2.cpp  tiny_trie_2.h  tiny_value_trie.h  trie_util.h  value_trie.h
src/util/: primes.hpp
test/: CMakeLists.txt  test_aho_corasick.cpp  test_art.cpp  test_tinyptr.cpp  test_trie.cpp  test_words.h
